# python-project-83

./: .gitignore  Makefile  README.md  build.sh  code-env  database.sql  pyproject.toml
.github/workflows/: python.yml
page_analyzer/: app.py  db.py  services.py
page_analyzer/templates/: base.html  index.html
page_analyzer/templates/urls/: index.html  show.html
